force-app/main/default/objects/VTACCourseCode__c/VTACCourseCode__c.object-meta.xml
<CustomObject>
    <description>Object to contain VTAC Codes</description>
    <label>VTAC Course Code</label>
    <nameField>
        <displayFormat>AID-VTAC-{0000}</displayFormat>
        <label>VTAC Course Code ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VTAC Course Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>