force-app/main/default/objects/VTACCourseCode__c/fields/L_AD_Course_Instance_Version_Number__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Course_Instance_Version_Number__c</fullName>
    <formula>L_AD_CourseInstance__r.L_AD_Course_Instance_Version_Number__c</formula>
    <label>Course Instance Version Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>