force-app/main/default/objects/VTACCourseCode__c/fields/L_AD_CourseInstance__c.field-meta.xml
<CustomField>
    <fullName>L_AD_CourseInstance__c</fullName>
    <label>Course Instance</label>
    <referenceTo>CourseInstance__c</referenceTo>
    <relationshipLabel>VTAC Course Codes</relationshipLabel>
    <relationshipName>VTAC_Course_Codes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>