force-app/main/default/objects/VTACCourseCode__c/fields/L_AD_Fee_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Fee_Type_Code__c</fullName>
    <formula>TEXT(L_AD_Fee_Type_Code_ID__r.L_AD_Fee_Type_Code__c)</formula>
    <label>Fee Type Code</label>
    <type>Text</type>
</CustomField>