force-app/main/default/objects/VTACCourseCode__c/fields/L_AD_Fee_Type_Code_ID__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Fee_Type_Code_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fee Type Code ID</label>
    <referenceTo>FeeType__c</referenceTo>
    <relationshipLabel>VTAC Course Codes</relationshipLabel>
    <relationshipName>VTAC_Course_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>