force-app/main/default/objects/VTACCourseCode__c/fields/L_AD_Fee_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Fee_Type_Description__c</fullName>
    <formula>L_AD_Fee_Type_Code_ID__r.L_AD_Fee_Type_Description__c</formula>
    <label>Fee Type Description</label>
    <type>Text</type>
</CustomField>