force-app/main/default/objects/VTACCourseCode__c/fields/L_AD_Specialisation__c.field-meta.xml
<CustomField>
    <fullName>L_AD_Specialisation__c</fullName>
    <label>Specialisation</label>
    <length>64</length>
    <type>Text</type>
</CustomField>