force-app/main/default/objects/VTACCourseCode__c/fields/L_AD_VTAC_Code__c.field-meta.xml
<CustomField>
    <fullName>L_AD_VTAC_Code__c</fullName>
    <label>VTAC-Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>