force-app/main/default/objects/VTACCourseCode__c/fields/L_AD_VTAC_Code_Status__c.field-meta.xml
<CustomField>
    <fullName>L_AD_VTAC_Code_Status__c</fullName>
    <label>VTAC Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AID_Status</valueSetName>
    </valueSet>
</CustomField>