force-app/main/default/objects/VTACCourseCode__c/validationRules/Approved_Or_Archived_Cannot_Be_Edited.validationRule-meta.xml
<ValidationRule>
    <fullName>Approved_Or_Archived_Cannot_Be_Edited</fullName>
    <active>true</active>
    <description>VTAC Code with Status = &apos;Archived&apos; or &apos;Approved&apos; cannot be edited.</description>
    <errorConditionFormula>AND(
        OR(
           ISPICKVAL( L_AD_VTAC_Code_Status__c , &quot;Approved&quot;),
           ISPICKVAL( L_AD_VTAC_Code_Status__c , &quot;Archived&quot;)
          ),
	OR(
	   ISCHANGED( L_AD_VTAC_Code__c ),
	   ISCHANGED( L_AD_Fee_Type_Code_ID__c ),
	   ISCHANGED( L_AD_Specialisation__c )
        )
    )</errorConditionFormula>
    <errorMessage>Record is not editable when Status is &apos;Approved or &apos;Archived&apos;.</errorMessage>
</ValidationRule>