force-app/main/default/objects/VTACCourseCode__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>L_AD_VTAC_Code__c</columns>
    <columns>L_AD_Specialisation__c</columns>
    <columns>L_AD_Fee_Type_Code_ID__c</columns>
    <columns>L_AD_CourseInstance__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>